--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/nextjs": "^6.20.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -23,6 +26,7 @@
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.474.0",
     "next": "15.2.3",
+    "next-intl": "^4.3.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^3.0.1",
