--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.474.0",
     "next": "15.2.3",
     "next-intl": "^4.3.9",
